--- a/package.json
+++ b/package.json
@@ -5,13 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "dotenv -e .env -- bun --filter '*'  --elide-lines=0 dev",
-    "dev:ui": "dotenv -e .env -- bun run --filter '@cronicorn/frontend' --elide-lines=0  dev",
-    "dev:api": "dotenv -e .env -- bun run --filter '@cronicorn/api' --elide-lines=0 dev",
+    "dev": "dotenv -e .env -- bun --filter '*' dev",
     "clean": "bun --filter '*' clean && rm -rf node_modules",
     "check-types": "bun --filter '*' check-types",
-    "migrate": "dotenv -e .env -- bun run --filter '@cronicorn/database' migrate",
-    "generate": "dotenv -e .env -- bun run --filter '@cronicorn/database' generate",
+    "migrate:dev": "dotenv -e .env -- bun run --filter '@cronicorn/database' migrate",
     "seed:dev": "dotenv -e .env -- bun run --filter '@cronicorn/database' seed",
     "reset:dev": "dotenv -e .env -- bun run --filter '@cronicorn/database' reset",
     "studio": "dotenv -e .env -- bun run --filter '@cronicorn/database' studio",
