--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -21,6 +21,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "packageManager": "pnpm@10.7.0",
   "dependencies": {
     "@paralleldrive/cuid2": "^2.2.2",
     "drizzle-orm": "^0.44.2",
