--- a/deployment/docker-compose-deploy.yml
+++ b/deployment/docker-compose-deploy.yml
@@ -48,19 +48,15 @@ services:
     build:
       context: ../
       dockerfile: deployment/Dockerfile.api
-      args:
-        DATABASE_URL: ${DATABASE_URL}
-        AUTH_SECRET: ${AUTH_SECRET}
-        GITHUB_ID: ${GITHUB_ID}
-        GITHUB_SECRET: ${GITHUB_SECRET}
+      
     ports:
        - 3001:3001
     # network_mode: host
-    # environment:
-    #   DATABASE_URL: ${DATABASE_URL}
-    #   AUTH_SECRET: ${AUTH_SECRET}
-    #   GITHUB_ID: ${GITHUB_ID}
-    #   GITHUB_SECRET: ${GITHUB_SECRET}
+    environment:
+      DATABASE_URL: ${DATABASE_URL}
+      AUTH_SECRET: ${AUTH_SECRET}
+      GITHUB_ID: ${GITHUB_ID}
+      GITHUB_SECRET: ${GITHUB_SECRET}
 
       # API_HOSTNAME: ${API_HOSTNAME}
       # API_PORT: ${API_PORT}
