--- a/deployment/Dockerfile.frontend
+++ b/deployment/Dockerfile.frontend
@@ -25,6 +25,9 @@ COPY --from=builder --chown=nextjs:nodejs /app/apps/frontend/.next/static ./.nex
 COPY --from=builder --chown=nextjs:nodejs /app/apps/frontend/public ./.next/standalone/apps/frontend/public
 EXPOSE 3000
 
+# Bake this in as an env var at build time (pass in via args in docker-compose)
+ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
+
 # ENV PORT 3456
 ENV HOSTNAME "0.0.0.0"
 
