--- a/deployment/docker-compose-deploy.yml
+++ b/deployment/docker-compose-deploy.yml
@@ -11,8 +11,8 @@ services:
     ports:
       - 3456:3000
     restart: unless-stopped
-    # environment:
-    #   NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
+    environment:
+      NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
       # HOSTNAME:
     # depends_on:
     #   cronicorn-db:
