--- a/deployment/docker-compose-deploy.yml
+++ b/deployment/docker-compose-deploy.yml
@@ -7,12 +7,12 @@ services:
       context: ../
       dockerfile: deployment/Dockerfile.frontend
       args:
-        NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
+        API_URL: ${API_URL}
     ports:
       - 3456:3000
     restart: unless-stopped
-    environment:
-      NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
+    # environment:
+    #   API_URL: ${API_URL}
       # HOSTNAME:
     # depends_on:
     #   cronicorn-db:
@@ -21,7 +21,7 @@ services:
     #   - cronicorn_prod_network
     # network_mode: host
     # environment:
-    #   NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
+    #   API_URL: ${API_URL}
       # HOSTNAME: 0.0.0.0
       # PORT: 3000
   cronicorn-db:
@@ -60,10 +60,11 @@ services:
       AUTH_SECRET: ${AUTH_SECRET}
       GITHUB_ID: ${GITHUB_ID}
       GITHUB_SECRET: ${GITHUB_SECRET}
+      API_URL: ${API_URL}
 
       # API_HOSTNAME: ${API_HOSTNAME}
       # API_PORT: ${API_PORT}
-      # NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
+      # API_URL: ${API_URL}
       # NEXT_PUBLIC_APP_URL: ${NEXT_PUBLIC_APP_URL}
 
 volumes:
