--- a/deployment/docker-compose-deploy.yml
+++ b/deployment/docker-compose-deploy.yml
@@ -31,7 +31,8 @@ services:
       timeout: 5s
       retries: 5
     volumes:
-      - cronicorn-db:/var/lib/postgresql/data
+      - "../files/cronicorn-database-volume:/var/lib/postgresql/data"
+      
   cronicorn-api:
     container_name: prod-cronicorn-api
     restart: unless-stopped
@@ -57,8 +58,6 @@ services:
       # API_URL: ${API_URL}
       # NEXT_PUBLIC_APP_URL: ${NEXT_PUBLIC_APP_URL}
 
-volumes:
-  cronicorn-db:
 
 # networks:
 #   cronicorn_prod_network:
