--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,4 @@ services:
       timeout: 5s
       retries: 5
     volumes:
-      - cronicorndatavolume:/var/lib/postgresql/data
-
-volumes:
-  cronicorndatavolume:
+      - "../files/cronicorn-database-volume:/var/lib/postgresql/data"
