--- a/deployment/docker-compose-deploy.yml
+++ b/deployment/docker-compose-deploy.yml
@@ -32,7 +32,7 @@ services:
       retries: 5
     volumes:
       - "../files/cronicorn-database-volume:/var/lib/postgresql/data"
-      
+
   cronicorn-api:
     container_name: prod-cronicorn-api
     restart: unless-stopped
@@ -42,6 +42,8 @@ services:
     build:
       context: ../
       dockerfile: deployment/Dockerfile.api
+      args:
+        - DATABASE_URL=${DATABASE_URL}
       
     ports:
        - 3001:3001
