--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -24,12 +24,13 @@
   "packageManager": "pnpm@10.7.0",
   "dependencies": {
     "@paralleldrive/cuid2": "^2.2.2",
+    "@types/node": "^20.11.17",
     "drizzle-orm": "^0.44.2",
     "drizzle-seed": "^0.3.1",
     "drizzle-zod": "^0.8.2",
     "pg": "^8.16.3",
-    "zod": "^4.0.5",
-    "@types/node": "^20.11.17"
+    "postgres": "^3.4.7",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@types/pg": "^8.15.4",
