--- a/deployment/docker-compose-deploy.yml
+++ b/deployment/docker-compose-deploy.yml
@@ -26,7 +26,7 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
 
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready"]
+      test: [ "CMD-SHELL", "pg_isready -d $${POSTGRES_DB} -U $${POSTGRES_USER}"]
       interval: 10s
       timeout: 5s
       retries: 5
