--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
   "packageManager": "bun@1.2.18",
   "dependencies": {
     "dotenv-cli": "^8.0.0"
+  },
+  "devDependencies": {
+    "turbo": "^2.5.5"
   }
 }
