--- a/deployment/Dockerfile.migrator
+++ b/deployment/Dockerfile.migrator
@@ -1,32 +1,9 @@
-FROM oven/bun:alpine AS base
- 
-FROM base AS builder
-# Set working directory
-WORKDIR /app
+FROM oven/bun:1.2-alpine
 
-RUN bun install --global turbo
+WORKDIR /usr/src/app
+ENV NODE_ENV=production
+
 COPY . .
- 
-# Generate a partial monorepo with a pruned lockfile for a target workspace.
-# Assuming "web" is the name entered in the project's package.json: { name: "web" }
-RUN turbo prune @cronicorn/database --docker
- 
-# Add lockfile and package.json's of isolated subworkspace
-FROM base AS installer
-WORKDIR /app
- 
-# First install the dependencies (as they change less often)
-COPY --from=builder /app/out/json/ .
 RUN bun install --frozen-lockfile
- 
-# Build the project
-COPY --from=builder /app/out/full/ .
-RUN bun run --filter '@cronicorn/database' build-migration-script
- 
-FROM base AS runner
-WORKDIR /app
- 
-COPY --from=installer --chown=nextjs:nodejs /app/packages/database/dist ./dist
 
-EXPOSE 3000
-CMD ["bun", "run", "./dist/migrate.js"]
+CMD ["bun", "run", "prod:migrate-script"]
