--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,15 @@
 
-
-
-##### API
-# api url to tell openapi
-API_EXTERNAL_URL=http://localhost:3001
-
-# github auth provider
+# Auth
 GITHUB_ID=
 GITHUB_SECRET=
-AUTH_SECRET=supersecret
+AUTH_SECRET=
 
-# where to serve the api from
-API_PORT=3001
-API_HOSTNAME=localhost
 
-##### DATABASE
-DATABASE_URL=postgres://user:password@localhost:6666/db
+API_URL=
+DATABASE_URL=
 
-##### UI
-# Vars to tell the UI where to proxy api requests to
-NEXT_PUBLIC_API_URL=http://localhost:3001
-# The url of the UI
-NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# DEPLOYMENT ONLY
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
