--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,16 @@
 
 # Auth
-GITHUB_ID=
-GITHUB_SECRET=
-AUTH_SECRET=
+GITHUB_ID=your_github_id_here
+GITHUB_SECRET=your_github_secret_here
+AUTH_SECRET=supersecret
+AUTH_URL=http://localhost:3000/api/auth
 
 
-API_URL=
-DATABASE_URL=
+API_URL=http://localhost:3001
+DATABASE_URL=postgres://user:password@localhost:6666/db
 
 
 # DEPLOYMENT ONLY
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
+POSTGRES_USER=user
+POSTGRES_PASSWORD=password
+POSTGRES_DB=db
