--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@cronicorn/api",
+  "version": "0.1.0",
   "type": "module",
   "main": "./src/index.ts",
   "types": "./src/index.ts",
@@ -21,28 +22,32 @@
     "src"
   ],
   "scripts": {
-    "dev": "tsx watch src/run.ts",
+    "dev": "tsx watch src/index.ts",
     "build": "bun build ./src/run.ts --target node --outdir ./dist",
     "start": "bun run dist/run.js",
     "check-types": "tsc --noEmit",
     "clean": "rm -rf dist && rm -rf node_modules"
   },
   "dependencies": {
-    "@auth/core": "^0.40.0",
-    "@cronicorn/database": "workspace:*",
-    "@hono/auth-js": "^1.0.17",
-    "@hono/node-server": "^1.15.0",
-    "@hono/zod-validator": "^0.7.0",
-    "@scalar/hono-api-reference": "^0.9.10",
-    "@scalar/openapi-to-markdown": "^0.2.20",
-    "hono": "^4.8.4",
-    "hono-openapi": "^0.4.8",
-    "zod": "^4.0.5",
-    "zod-openapi": "^5.1.0"
+    "@hono/node-server": "^1.14.3",
+    "@hono/zod-openapi": "^0.19.8",
+    "@scalar/hono-api-reference": "^0.9.2",
+    "dotenv": "^17.0.1",
+    "dotenv-expand": "^12.0.2",
+    "hono": "^4.7.11",
+    "hono-pino": "^0.9.1",
+    "pino": "^9.7.0",
+    "pino-pretty": "^13.0.0",
+    "stoker": "1.4.3",
+    "zod": "^3.25.51"
   },
   "devDependencies": {
-    "@types/node": "^20.11.17",
-    "tsx": "^4.7.1",
-    "typescript": "^5.8.3"
+    "@types/node": "^24.0.10",
+    "cross-env": "^7.0.3",
+    "drizzle-kit": "^0.24.2",
+    "tsc-alias": "^1.8.16",
+    "tsx": "^4.19.4",
+    "typescript": "^5.8.3",
+    "vitest": "^3.2.1"
   }
 }
