--- a/apps/api2/.env.example
+++ b/apps/api2/.env.example
@@ -1,4 +1,4 @@
 NODE_ENV=development
 PORT=9999
 LOG_LEVEL=debug
-DATABASE_URL=file:dev.db
+DATABASE_URL=postgresql://user:password@localhost:6666/db
