--- a/apps/api2/.gitignore
+++ b/apps/api2/.gitignore
@@ -1,35 +1,11 @@
-# dev
-.yarn/
-!.yarn/releases
-.vscode/*
-!.vscode/launch.json
-!.vscode/*.code-snippets
-.idea/workspace.xml
-.idea/usage.statistics.xml
-.idea/shelf
+/node_modules
+/dist
 
-# deps
-node_modules/
-
-# env
 .env
-.env.production
+.env.*.local
 
-# logs
-logs/
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-# misc
 .DS_Store
 
-dev.db
-test.db
-.vercel
-dist
-
-.dev.vars
+*.tsbuildinfo
