--- a/apps/api2/package.json
+++ b/apps/api2/package.json
@@ -1,43 +1,48 @@
 {
-  "name": "hono-open-api-starter",
+  "name": "hono-openapi-postgres-starter",
   "type": "module",
   "version": "1.0.0",
   "license": "MIT",
+  "engines": {
+    "bun": ">=1.2.0"
+  },
   "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "start": "node ./dist/src/index.js",
-    "typecheck": "tsc --noEmit",
+    "dev": "bun run --watch src/index.ts",
+    "start": "bun run ./dist/src/index.js",
+    "reset": "bun run src/db/reset.ts",
+    "typecheck": "bun x tsc --noEmit",
     "lint": "eslint .",
-    "lint:fix": "npm run lint --fix",
+    "lint:fix": "bun run lint --fix",
     "test": "cross-env NODE_ENV=test vitest",
     "build": "tsc && tsc-alias"
   },
   "dependencies": {
-    "@hono/node-server": "^1.14.3",
-    "@hono/zod-openapi": "^0.19.8",
-    "@libsql/client": "^0.15.8",
-    "@scalar/hono-api-reference": "^0.9.2",
-    "dotenv": "^17.0.1",
-    "dotenv-expand": "^12.0.2",
-    "drizzle-orm": "^0.33.0",
-    "drizzle-zod": "^0.5.1",
-    "hono": "^4.7.11",
-    "hono-pino": "^0.9.1",
-    "pino": "^9.7.0",
+    "@hono/node-server": "^1.13.7",
+    "@hono/zod-openapi": "^0.18.3",
+    "@scalar/hono-api-reference": "^0.5.165",
+    "dotenv": "^16.4.7",
+    "dotenv-expand": "^12.0.1",
+    "drizzle-orm": "^0.38.3",
+    "drizzle-seed": "^0.3.1",
+    "drizzle-zod": "^0.6.1",
+    "hono": "^4.6.15",
+    "hono-pino": "^0.7.0",
+    "pg": "^8.16.3",
+    "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
-    "stoker": "1.4.3",
-    "zod": "^3.25.51"
+    "stoker": "^1.4.2",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.13.3",
-    "@types/node": "^24.0.10",
+    "@antfu/eslint-config": "^3.12.1",
+    "@types/node": "^22.10.2",
     "cross-env": "^7.0.3",
-    "drizzle-kit": "^0.24.2",
-    "eslint": "^9.28.0",
-    "eslint-plugin-format": "^1.0.1",
-    "tsc-alias": "^1.8.16",
-    "tsx": "^4.19.4",
-    "typescript": "^5.8.3",
-    "vitest": "^3.2.1"
+    "drizzle-kit": "^0.30.1",
+    "eslint": "^9.17.0",
+    "eslint-plugin-format": "^0.1.3",
+    "tsc-alias": "^1.8.10",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.2",
+    "vitest": "^2.1.8"
   }
 }
