--- a/apps/api2/tsconfig.json
+++ b/apps/api2/tsconfig.json
@@ -3,16 +3,21 @@
     "target": "ESNext",
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx",
-    // "baseUrl": "./",
+    "baseUrl": "./",
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "paths": {
       "@/*": ["./src/*"]
     },
+    "resolveJsonModule": true,
     "typeRoots": ["./node_modules/@types"],
-    "types": ["node"],
+    "types": [
+      "node"
+    ],
     "strict": true,
     "outDir": "./dist",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "skipLibCheck": true
   },
   "tsc-alias": {
