--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,7 +1,8 @@
 version: "3"
 
 services:
-  cronicorn-web:
+  web:
+    container_name: web
     networks:
       - cronicorn
     build:
@@ -14,7 +15,8 @@ services:
       - 3000:80
     restart: unless-stopped
 
-  cronicorndb:
+  db:
+    container_name: db
     image: postgres:17
     restart: unless-stopped
     ports:
@@ -33,8 +35,8 @@ services:
       - cronicorn
     volumes:
       - "../files/crondbvolume:/var/lib/postgresql/data"
-  cronicorn-api:
-    container_name: prod-cronicorn-api
+  api:
+    container_name: api
     restart: unless-stopped
     depends_on:
       cronicorndb:
