--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -9,18 +9,14 @@ services:
       context: ../
       dockerfile: docker/Dockerfile.web
     depends_on:
-      cronicorn-api:
+      api:
         condition: service_started
-    ports:
-      - 3000:80
     restart: unless-stopped
 
   db:
     container_name: db
     image: postgres:17
     restart: unless-stopped
-    ports:
-      - 5432:5432
     environment:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_USER: ${POSTGRES_USER}
@@ -39,15 +35,13 @@ services:
     container_name: api
     restart: unless-stopped
     depends_on:
-      cronicorndb:
+      db:
         condition: service_healthy
     build:
       context: ../
       dockerfile: docker/Dockerfile.api
     networks:
       - cronicorn
-    # ports:
-    #    - 3001:9999
     environment:
       DATABASE_URL: ${DATABASE_URL}
       AUTH_SECRET: ${AUTH_SECRET}
