--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -9,7 +9,7 @@ RUN pnpm i --frozen-lockfile
 FROM deps AS builder
 WORKDIR /app
 RUN corepack enable
-RUN pnpm --filter @tasks-app/api build
+RUN pnpm --filter @tasks-app/api... build
 
 
 FROM oven/bun:1.2-alpine
