--- a/docker/Dockerfile.web
+++ b/docker/Dockerfile.web
@@ -6,7 +6,7 @@ RUN pnpm i --frozen-lockfile
 
 FROM base AS builder
 WORKDIR /app
-RUN pnpm --filter @tasks-app/web build
+RUN pnpm --filter @tasks-app/web... build
 
 FROM nginx:alpine
 ENV NODE_ENV=production
