--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -9,7 +9,7 @@ server {
   }
 
   location /api/ {
-    proxy_pass http://cronicorn-api:9999/api/;
+    proxy_pass http://api:9999/api/;
     proxy_http_version 1.1;
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
