--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,6 +1,6 @@
 server {
   listen 80;
-  server_name localhost;
+  server_name cronicorn.com www.cronicorn.com;
 
   location / {
     root /usr/share/nginx/html;
