--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,16 +15,19 @@
     "@auth/core": "^0.37.4",
     "@hono/auth-js": "^1.0.15",
     "@hookform/resolvers": "^3.9.1",
+    "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.62.7",
     "@tanstack/react-router": "^1.90.0",
     "@tasks-app/api": "workspace:^",
     "@tasks-app/api-client": "workspace:^",
     "@tasks-app/eslint-config": "workspace:^",
     "@types/node": "^22.10.2",
+    "@workspace/ui": "workspace:^",
     "hono": "^4.6.15",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.1",
+    "tailwindcss": "^4.0.8",
     "zod": "^3.24.1"
   },
   "devDependencies": {
