--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,12 +18,15 @@
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-router": "^1.129.5",
+    "@tanstack/react-table": "^8.21.3",
     "@tasks-app/api": "workspace:^",
     "@tasks-app/api-client": "workspace:^",
     "@tasks-app/eslint-config": "workspace:^",
     "@types/node": "^22.10.2",
     "@workspace/ui": "workspace:^",
     "hono": "^4.8.5",
+    "lucide-react": "^0.475.0",
+    "nuqs": "^2.4.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
