--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
       "@workspace/ui/*": ["./src/*"]
     }
+
   },
   "include": ["."],
   "exclude": ["node_modules", "dist"]
