--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,5 +54,7 @@
   "chat.agent.maxRequests": 50,
   "chat.tools.autoApprove": true,
   "github.copilot.chat.agent.thinkingTool": true,
-  
+  "typescript.preferences.importModuleSpecifier": "non-relative",
+  "javascript.preferences.importModuleSpecifier": "non-relative",
+
 }
