--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,42 +13,42 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@auth/core": "^0.40.0",
-    "@hono/auth-js": "^1.1.0",
-    "@hookform/resolvers": "^5.1.1",
-    "@tailwindcss/vite": "^4.1.11",
-    "@tanstack/react-query": "^5.83.0",
-    "@tanstack/react-router": "^1.129.5",
-    "@tasks-app/api": "workspace:^",
-    "@tasks-app/api-client": "workspace:^",
-    "@tasks-app/eslint-config": "workspace:^",
-    "@types/node": "^22.10.2",
-    "@workspace/ui": "workspace:^",
-    "hono": "^4.8.5",
-    "lucide-react": "^0.475.0",
-    "nuqs": "^2.4.3",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-hook-form": "^7.60.0",
-    "tailwindcss": "^4.1.11",
-    "zod": "^3.24.1"
+    "@auth/core": "0.40.0",
+    "@hono/auth-js": "1.1.0",
+    "@hookform/resolvers": "5.1.1",
+    "@tailwindcss/vite": "4.1.11",
+    "@tanstack/react-query": "5.83.0",
+    "@tanstack/react-router": "1.129.5",
+    "@tasks-app/api": "workspace:*",
+    "@tasks-app/api-client": "workspace:*",
+    "@tasks-app/eslint-config": "workspace:*",
+    "@types/node": "22.10.2",
+    "@workspace/ui": "workspace:*",
+    "hono": "4.8.5",
+    "lucide-react": "0.475.0",
+    "nuqs": "2.4.3",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-hook-form": "7.60.0",
+    "tailwindcss": "4.1.11",
+    "zod": "3.25.76"
   },
   "devDependencies": {
-    "@eslint-react/eslint-plugin": "^1.52.3",
-    "@eslint/js": "^9.31.0",
-    "@tanstack/eslint-plugin-query": "^5.81.2",
-    "@tanstack/router-devtools": "^1.129.5",
-    "@tanstack/router-plugin": "^1.129.5",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react": "^4.7.0",
-    "eslint": "^9.31.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
+    "@eslint-react/eslint-plugin": "~1.52.3",
+    "@eslint/js": "~9.31.0",
+    "@tanstack/eslint-plugin-query": "~5.81.2",
+    "@tanstack/router-devtools": "~1.129.5",
+    "@tanstack/router-plugin": "~1.129.5",
+    "@types/react": "~19.1.8",
+    "@types/react-dom": "~19.1.6",
+    "@vitejs/plugin-react": "~4.7.0",
+    "eslint": "~9.31.0",
+    "eslint-plugin-react-hooks": "~5.2.0",
+    "eslint-plugin-react-refresh": "~0.4.20",
+    "globals": "~16.3.0",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.38.0",
-    "vite": "^7.0.5",
-    "vite-tsconfig-paths": "^5.1.4"
+    "typescript-eslint": "~8.38.0",
+    "vite": "~7.0.5",
+    "vite-tsconfig-paths": "~5.1.4"
   }
 }
