--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -53,9 +53,9 @@
     "lucide-react": "0.475.0",
     "next-themes": "0.4.6",
     "nuqs": "2.4.3",
-    "react": "19.0.0",
+    "react": "19.1.0",
     "react-day-picker": "9.8.0",
-    "react-dom": "19.0.0",
+    "react-dom": "19.1.0",
     "react-hook-form": "7.60.0",
     "react-resizable-panels": "3.0.3",
     "recharts": "2.15.4",
@@ -67,14 +67,14 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "~4.0.8",
-    "@tasks-app/eslint-config": "workspace:^",
+    "@tasks-app/eslint-config": "workspace:*",
     "@turbo/gen": "~2.4.2",
     "@types/node": "~22.10.2",
-    "@types/react": "~19",
-    "@types/react-dom": "~19",
-    "eslint": "~9.17.0",
+    "@types/react": "~19.1.8",
+    "@types/react-dom": "~19.1.6",
+    "eslint": "~9.31.0",
     "eslint-plugin-format": "~0.1.3",
-    "tailwindcss": "~4.0.8",
-    "typescript": "~5.7.3"
+    "tailwindcss": "~4.1.11",
+    "typescript": "~5.8.3"
   }
 }
