--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,12 +10,15 @@
     "lint": "eslint . --max-warnings 0",
     "lint:fix": "eslint . --max-warnings 0 --fix",
     "preview": "vite preview",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "playwright:install": "playwright install",
+    "test": "vitest"
   },
   "dependencies": {
     "@auth/core": "0.40.0",
     "@hono/auth-js": "1.1.0",
     "@hookform/resolvers": "5.1.1",
+    "@playwright/test": "^1.54.1",
     "@tailwindcss/vite": "4.1.11",
     "@tanstack/react-query": "5.83.0",
     "@tanstack/react-router": "1.129.5",
@@ -39,6 +42,8 @@
     "@tanstack/eslint-plugin-query": "~5.81.2",
     "@tanstack/router-devtools": "~1.129.5",
     "@tanstack/router-plugin": "~1.129.5",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@types/react": "~19.1.8",
     "@types/react-dom": "~19.1.6",
     "@vitejs/plugin-react": "~4.7.0",
@@ -46,9 +51,12 @@
     "eslint-plugin-react-hooks": "~5.2.0",
     "eslint-plugin-react-refresh": "~0.4.20",
     "globals": "~16.3.0",
+    "install": "^0.13.0",
+    "jsdom": "^26.1.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "~8.38.0",
     "vite": "~7.0.5",
-    "vite-tsconfig-paths": "~5.1.4"
+    "vite-tsconfig-paths": "~5.1.4",
+    "vitest": "~2.1.8"
   }
 }
