--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,5 +1,7 @@
 {
+
   "compilerOptions": {
+    // "baseUrl": ".",
     "paths": {
       "@/web/*": ["./src/*"],
       "@workspace/ui/*": ["../../packages/ui/src/*"]
