--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "clean": "pnpm run -r --parallel clean && rm -rf node_modules",
     "build": "pnpm run -r build",
     "test": "pnpm run -r --parallel test",
+    "test:ui": "pnpm run --filter @tasks-app/web test",
     "lint": "pnpm run -r --parallel lint",
     "lint:fix": "pnpm run -r --parallel lint:fix",
     "db:push": "pnpm run -r --parallel db:push",
