--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,11 +46,12 @@
     "pcss",
     "postcss"
   ],
-  "github.copilot.chat.codeGeneration.instructions": [      
-    {
-      "text": "When answering questions about frameworks, libraries, or APIs, use Context7 to retrieve current documentation rather than relying on training data.",      
-    }
-  ],
+  // "github.copilot.chat.codeGeneration.instructions": [      
+  //   {
+  //     "file": "copilot-codeGeneration-instructions.md"
+  //     // "text": "When answering questions about frameworks, libraries, or APIs, use Context7 to retrieve current documentation rather than relying on training data.",      
+  //   }
+  // ],
   "chat.agent.maxRequests": 50,
   "chat.tools.autoApprove": true,
   "github.copilot.chat.agent.thinkingTool": true,
