--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -8,6 +8,8 @@
       "@/api/*": ["./src/*"]
     },
     "typeRoots": ["./node_modules/@types"],
+    "declaration": true,
+    "declarationMap": true,
     "outDir": "dist"
   }
 }
