--- a/packages/api-client/package.json
+++ b/packages/api-client/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "version": "1.0.0",
   "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
  
   "scripts": {
     "dev": "tsc --watch",
