--- a/apps/api/.env.test
+++ b/apps/api/.env.test
@@ -4,3 +4,4 @@ GITHUB_CLIENT_SECRET=50dcc9a9f2d28305930127cddf491cd1be487c0a
 AUTH_URL="http://localhost:3000/api/auth"
 AUTH_SECRET="abc123"
 FAKE_AUTH=true
+LOG_LEVEL=error
