--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -32,7 +32,8 @@
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
     "db:reset": "tsx --env-file=.env src/db/reset.ts",
-    "db:seed": "tsx --env-file=.env src/db/seed/seed.ts"
+    "db:seed": "tsx --env-file=.env src/db/run-seed.ts",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@auth/core": "0.40.0",
