--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,6 +27,8 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/node": "22.10.2",
     "@workspace/ui": "workspace:*",
+    "dotenv": "17.2.0",
+    "dotenv-expand": "12.0.2",
     "hono": "4.8.5",
     "lucide-react": "0.475.0",
     "nuqs": "2.4.3",
