--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,7 @@
     "lint:fix": "eslint . --max-warnings 0 --fix",
     "preview": "vite preview",
     "typecheck": "tsc --project tsconfig.app.json --noEmit",
-    "test": "vitest"
+    "test": "vitest --coverage"
   },
   "dependencies": {
     "@auth/core": "0.40.0",
@@ -49,6 +49,7 @@
     "@types/react": "~19.1.8",
     "@types/react-dom": "~19.1.6",
     "@vitejs/plugin-react": "~4.7.0",
+    "@vitest/coverage-v8": "2.1.9",
     "eslint": "~9.31.0",
     "eslint-plugin-react-hooks": "~5.2.0",
     "eslint-plugin-react-refresh": "~0.4.20",
