--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -62,7 +62,7 @@
   },
   "devDependencies": {
     "@types/node": "~22.10.2",
-    "@vitest/coverage-v8": "2.1.9",
+    "@vitest/coverage-v8": "~2.1.9",
     "cross-env": "~7.0.3",
     "drizzle-kit": "~0.30.1",
     "eslint": "~9.31.0",
