--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,7 +24,7 @@
     "@tasks-app/api": "workspace:*",
     "@tasks-app/api-client": "workspace:*",
     "@tasks-app/eslint-config": "workspace:*",
-    "@testing-library/user-event": "^14.6.1",
+    "@testing-library/user-event": "14.6.1",
     "@types/node": "22.10.2",
     "@workspace/ui": "workspace:*",
     "dotenv": "17.2.0",
@@ -44,18 +44,18 @@
     "@tanstack/eslint-plugin-query": "~5.81.2",
     "@tanstack/router-devtools": "~1.129.5",
     "@tanstack/router-plugin": "~1.129.5",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
+    "@testing-library/jest-dom": "~6.6.3",
+    "@testing-library/react": "~16.3.0",
     "@types/react": "~19.1.8",
     "@types/react-dom": "~19.1.6",
     "@vitejs/plugin-react": "~4.7.0",
-    "@vitest/coverage-v8": "2.1.9",
+    "@vitest/coverage-v8": "~2.1.9",
     "eslint": "~9.31.0",
     "eslint-plugin-react-hooks": "~5.2.0",
     "eslint-plugin-react-refresh": "~0.4.20",
     "globals": "~16.3.0",
-    "install": "^0.13.0",
-    "jsdom": "^26.1.0",
+    "install": "~0.13.0",
+    "jsdom": "~26.1.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "~8.38.0",
     "vite": "~7.0.5",
