--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -7,7 +7,8 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  test-coverage:
+    name: Test Coverage
     runs-on: ubuntu-latest
     env:
       NODE_ENV: test
